--- a/RockstarGamesLauncher/RockstarGamesLauncher.csproj
+++ b/RockstarGamesLauncher/RockstarGamesLauncher.csproj
@@ -24,9 +24,11 @@
     <None Remove="Resources\Icons\RightIcon.png" />
     <None Remove="Resources\Icons\RocktarGamesLogo.ico" />
     <None Remove="Resources\Icons\Sidebar.png" />
+    <None Remove="Resources\Images\GTAIVBackground.png" />
     <None Remove="Resources\Images\GTAIVLogo.png" />
     <None Remove="Resources\Images\GTAVBackground.png" />
     <None Remove="Resources\Images\GTAVLogo.png" />
+    <None Remove="Resources\Images\RedDeadOnlineBackground.png" />
     <None Remove="Resources\Images\RedDeadOnlineLogo.png" />
     <None Remove="Resources\Images\RockstarGamesLogo.png" />
   </ItemGroup>
@@ -44,9 +46,11 @@
     <Resource Include="Resources\Icons\RightIcon.png" />
     <Resource Include="Resources\Icons\RocktarGamesLogo.ico" />
     <Resource Include="Resources\Icons\Sidebar.png" />
+    <Resource Include="Resources\Images\GTAIVBackground.png" />
     <Resource Include="Resources\Images\GTAVBackground.png" />
     <Resource Include="Resources\Images\GTAIVLogo.png" />
     <Resource Include="Resources\Images\GTAVLogo.png" />
+    <Resource Include="Resources\Images\RedDeadOnlineBackground.png" />
     <Resource Include="Resources\Images\RedDeadOnlineLogo.png" />
     <Resource Include="Resources\Images\RockstarGamesLogo.png">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
