--- a/RockstarGamesLauncher/RockstarGamesLauncher.csproj
+++ b/RockstarGamesLauncher/RockstarGamesLauncher.csproj
@@ -16,10 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="Resources\Icons\Close.png" />
+    <None Remove="Resources\Icons\CloseIcon.png" />
     <None Remove="Resources\Icons\gta-iv.png" />
     <None Remove="Resources\Icons\gta-v.png" />
     <None Remove="Resources\Icons\LeftIcon.png" />
+    <None Remove="Resources\Icons\MaximizeIcon.png" />
+    <None Remove="Resources\Icons\MinimizeIcon.png" />
     <None Remove="Resources\Icons\rdr-online.png" />
     <None Remove="Resources\Icons\RightIcon.png" />
     <None Remove="Resources\Icons\RocktarGamesLogo.ico" />
@@ -38,7 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Resources\Icons\Close.png" />
+    <Resource Include="Resources\Icons\CloseIcon.png" />
     <Resource Include="Resources\Icons\gta-iv.png" />
     <Resource Include="Resources\Icons\gta-v.png" />
     <Resource Include="Resources\Icons\LeftIcon.png" />
@@ -46,6 +48,8 @@
     <Resource Include="Resources\Icons\RightIcon.png" />
     <Resource Include="Resources\Icons\RocktarGamesLogo.ico" />
     <Resource Include="Resources\Icons\Sidebar.png" />
+    <Resource Include="Resources\Icons\MinimizeIcon.png" />
+    <Resource Include="Resources\Icons\MaximizeIcon.png" />
     <Resource Include="Resources\Images\GTAIVBackground.png" />
     <Resource Include="Resources\Images\GTAVBackground.png" />
     <Resource Include="Resources\Images\GTAIVLogo.png" />
